--- a/ubuntu-xenial64/Vagrantfile
+++ b/ubuntu-xenial64/Vagrantfile
@@ -11,8 +11,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vbguest.auto_update = false
   # do NOT download the iso file from a webserver
   config.vbguest.no_remote = true
+  config.vm.network "private_network", ip: "192.168.33.10"
   #config.vm.network "forwarded_port", guest: 80, host: 8080
-  #config.vm.network "private_network", ip: "192.168.33.10"
   #config.vm.synced_folder "htdocs", "/var/www/html"
   #config.vm.provision "shell", path: "config.sh"
   config.vm.provider "virtualbox" do |vb|
