--- a/ubuntu-xenial64/playbook.yml
+++ b/ubuntu-xenial64/playbook.yml
@@ -13,3 +13,12 @@
 
   - name: Install Java 8
     apt: name=oracle-java8-installer force=yes
+
+  - name: set JAVA_HOME environment variable
+    lineinfile:
+      dest: /home/ubuntu/.bashrc
+      regexp: "{{ item.regexp }}"
+      line: "{{ item.line }}"
+    with_items:
+      - { regexp: 'export JAVA_HOME.*', line: 'export JAVA_HOME=/usr/lib/jvm/java-8-oracle' }
+      - { regexp: 'export PATH=$PATH:$JAVA_HOME/bin', line: 'export PATH=$PATH:$JAVA_HOME/bin' }
